--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: expodiff
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Package for Exploring World Expos and Specialised Expo data 
+Version: 0.1.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Yiran", "Yao", , "yyao0066@student.monash.edu", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: This package includes a dataset of world expos and specialised expo, along with a Shiny app to explore the data.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
